WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 229064
GlyphBuffer can become inconsistent with its backing string
https://bugs.webkit.org/show_bug.cgi?id=229064
Summary
GlyphBuffer can become inconsistent with its backing string
Myles C. Maxfield
Reported
2021-08-12 18:54:13 PDT
GlyphBuffer can become inconsistent with its backing string
Attachments
Patch
(9.59 KB, patch)
2021-08-12 18:56 PDT
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(9.63 KB, patch)
2021-08-12 19:08 PDT
,
Myles C. Maxfield
zalan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-08-12 18:56:54 PDT
Created
attachment 435463
[details]
Patch
Myles C. Maxfield
Comment 2
2021-08-12 19:08:39 PDT
Created
attachment 435465
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2021-08-19 18:55:15 PDT
<
rdar://problem/82152161
>
EWS
Comment 4
2021-08-19 21:57:23 PDT
Tools/Scripts/svn-apply failed to apply
attachment 435465
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Myles C. Maxfield
Comment 5
2021-08-20 01:05:11 PDT
Committed
r281300
(
240724@main
): <
https://commits.webkit.org/240724@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug